2007-01-27  dima  <dima.exe@gmail.com>

	* rails-ws.el: update rails-ws:*browser* functions

	* rails.el (rails-directory<-->types): add plugin directory

	* rails-for-view.el (rails-view:switch-with-menu): update menu title

	* rails-for-plugin.el: create

	* rails-for-helper.el (rails-helper:switch-with-menu): update menu title

	* rails-for-functional-test.el (rails-for-functional-test:switch-with-menu): update-menu-title

	* rails-for-controller.el (rails-controller:switch-with-menu): update menu title

	* rails-core.el (rails-core:menu): fix menu position 
	add new functions rails-core:plugin-files, rails-core:plugin-file,
	rails-core:current-plugin

2007-01-26  dima  <dima.exe@gmail.com>

	* rails-ui.el (rails-minor-mode-menu-bar-map): rename menu item WEBrick to Web Server.
	Update menu group Web Server

	* rails.el (rails-ws): add variable rails-default-environment

	* rails-ws.el: rename from rails-webrick, complete rewrite and cleanup

	* rails-navigation.el (rails-nav:create-goto-menu): now support
	nested lists in append-to-menu (ex. (list (cons) (cons)))
	(rails-nav:create-new-layout): cleanup
	(rails-nav:goto-layouts): cleanup

	* rails-core.el
	(rails-core:plugins): fix invalid path passed into directory-files
	(rails-core:layouts): new function

	* rails-for-view.el (rails-for-view): remove detect mmm-mode, always apply hotkeys to mmm-mode-map (if exist)

	* rails.el: apply ruby-mode to *.rake files and setup utf8 encoding

	* rails-lib.el (list->alist): skip if LIST entry is list	

2007-01-25  dima  <dima.exe@gmail.com>
  * rails-navigation.el, rails-ui.el: add rails-nav:goto-plugins
  * rails-ruby.el: remove advice for ruby-indent-command
  * rails-lib.el (def-snips): fix indentation
  * rails-core.el: 
	fix list ordered in rails-core:*
	add rails-core:observer-p
  * rails.el (rails-open-log): fix path to log file
  * rails.el: cleanup initialization code

2007-01-24  dima  <dima.exe@gmail.com>